--- a/source/documentation/core/color.html.md.erb
+++ b/source/documentation/core/color.html.md.erb
@@ -3,12 +3,18 @@ layout: documentation
 title:  color
 module: core
 source: color.py
+tags:   [ color, rendering ]
 related:
    - [ material, core/material.html ]
+   - [ transparency, core/transparency.html ]
 ---
 
-Set the color used when rendering. After calling `color()` all subsequent rendering
-will use the specified color value. Color values must be in the range 0.0 to 1.0.
+Set the color used when rendering. 
+
+After calling `color()` all subsequent rendering will use the specified color
+value. Color values must be in the range 0.0 to 1.0.  There a number of
+different ways this function can be called. See the [examples](#examples)
+section below for usage.
 
 ### syntax
 
