--- a/source/documentation/rendering/sphere.html.md.erb
+++ b/source/documentation/rendering/sphere.html.md.erb
@@ -3,13 +3,15 @@ layout: documentation
 title:  sphere
 module: rendering
 source: sphere.py
-tags  : [ geometry ]
+tags:   [ rendering, geometry ]
 related:
    - [ sphereDetail, rendering/sphere-detail.html ]
    - [ cube, rendering/cube.html ]
 ---
 
 Draw a sphere.
+
+This function draws a sphere with its center at the origin (0,0,0).
 
 ### syntax 
 
