--- a/source/partials/_navbar.haml
+++ b/source/partials/_navbar.haml
@@ -1,6 +1,6 @@
 .navbar.navbar-fixed-top
   .navbar-inner
-    %a.brand{:href => "/"} 
+    %a.brand{:href=>url_for("/index.html")}
       %i.icon-home
     %ul.nav
       - data.navbar.links.each do |link|
