Explicitly disable lighting in example code.

--- a/source/documentation/core/text-font.html.md.erb
+++ b/source/documentation/core/text-font.html.md.erb
@@ -35,6 +35,8 @@ size | font size (default=10)
 
 ~~~ python
 def display():
+   lighting(False)
+
    textFont('data/fonts/DroidSans.ttf')
    text("Droid Sans", 0, 0, 5)
 
@@ -54,6 +56,8 @@ def display():
 
 ~~~ python
 def display():
+   lighting(False)
+
    textFont('data/fonts/DroidSans.ttf', 32)
    text("Droid Sans", 0, 0, 5)
 
