Updated contact info.

--- a/source/partials/_footer.haml
+++ b/source/partials/_footer.haml
@@ -4,13 +4,13 @@
     %ul.unstyled
       %li
         %i.icon-envelope
-        = mail_to "jvan@cse.ucdavis.edu", "email"
+        = mail_to "iviz@lists.cse.ucdavis.edu", "email"
       %li
         %i.icon-github-alt
-        = link_to "github project", "https://github.com/jvan/vroom"
+        = link_to "github project", "https://github.com/comscictr/vroom"
       %li
         %i.icon-bug
-        = link_to "issues", "http://iviz.csc.ucdavis.edu/redmine/projects/vroom"
+        = link_to "issues", "https://github.com/comscictr/vroom/issues"
 
     :markdown
       this site was built using [middleman](http://middlemanapp.com) and
